--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,11 +1,12 @@
-
 body{
-  margin:0px;
+  margin: 0px;
 }
+
 a{
   color: black;
   text-decoration: none;
 }
+
 h1{
   font-size: 50px;
   text-align: center;
@@ -13,32 +14,37 @@ h1{
   margin: 0px;
   padding: 20px;
 }
+
 ol{
-    border-right:1px solid gray;
-    width:200px;
-    margin:0px;
+    border-right: 1px solid gray;
+    width: 200px;
+    margin: 0px;
 }
+
 li{
-  padding:5px;
+  padding: 5px;
 }
+
 #grid{
-  display:grid;
+  display: grid;
   grid-template-columns: 240px 1fr;
 }
+
 #grid ol{
-  padding-left:30px;
-  padding-top:20px;
+  padding-left: 30px;
+  padding-top: 20px;
 }
 #grid #article{
-  padding-left:10px;
+  padding-left: 10px;
 }
-@media(max-width:600px){
+@media(max-width: 600px){
   #grid{
-    display:block;
+    display: block;
   }
   ol{
-    border-right:none;
+    border-right: none;
   }
   h1{
     border-bottom: none;
   }
+}
